--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "swiper": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
