--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactmaoyan",
   "version": "0.1.0",
   "private": true,
+  "homepage":"./",
   "dependencies": {
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
